--- a/client/login.jade
+++ b/client/login.jade
@@ -14,5 +14,6 @@ html
 		form(name= 'login_form')
 			input(type='hidden' name= 'user_data')
 			input(type='hidden' id='url' value= url)
+			input(type='hidden' id='messenger')
 			input(type='hidden' id='key' value= key)
 	script(src="/dist/login.bundle.js")
