--- a/client/css/arachne.css
+++ b/client/css/arachne.css
@@ -3,8 +3,8 @@
  */
 
 .image_750x450{
-  width: 100%; height: 100% max-height: 350px; max-width: 400px;
-  min-height: 220px;
+  width: 100%; max-width: 750px; max-height: 450px; vertical-align: middle;
+  min-height: 450px: 
   overflow: hidden;
 }
 
@@ -276,9 +276,11 @@ a:hover { transition: all 200ms ease-in-out; }
 
 
 .Rankingbox {
+   
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    left : 20%;
     width: 100%;
     height: 58px;
     padding: 19px 70px 17px 30px;
@@ -292,6 +294,7 @@ a:hover { transition: all 200ms ease-in-out; }
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
     -webkit-appearance: none;
 }
+
 
 .Region{
     position: absolute;
@@ -307,9 +310,9 @@ a:hover { transition: all 200ms ease-in-out; }
 }
 
 .searchInput {
-  position: relative;
+    position: relative;
     display: block;
-    width: 522px;
+    width: 80%;
     margin: 0 auto;
 }
 
